"working with others" to "collaborative"

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 										<li class="fa-code">Medium: Minitab </li>
 										<li class="fa-bolt">Semiconducor layout (LAKER)</li>
 										<li class="fa-code">Basic: Python, SQL</li>
-										<li class="fa-users">Working with others, problem solving,teaching</li>
+										<li class="fa-users">collaborative, problem solving,teaching</li>
 									</ul>
 								</div>
 							</section>
@@ -129,7 +129,7 @@
 											<a href="#" class="image"><img src="images/patent.JPG" alt="" /></a>
 											<div class="inner">
 												<h4> Patent “Pixel Array and Display Panel Having the Same” (US20110310032 A1)</h4>
-												<p>As a TFT LCD Panel design engineer, I overcame the light line issues of a 6" LCD touch panel by changing the pattern of layout and wrote a patent with my colleague.</p><a href="https://patents.google.com/patent/US20110310032"><p>Link to the patent</p></a>
+												<p>As a TFT LCD Panel design engineer, I overcame the light line issues of a 6" LCD touch panel by changing the pattern of layout and wrote a patent with my colleagues.</p><a href="https://patents.google.com/patent/US20110310032"><p>Link to the patent</p></a>
 											</div>
 										</article>										<article>
 											<a href="#" class="image"><img src="images/melanoma.JPG" alt="" /></a>
