--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 										<li class="fa-code">Advanced: SAS, R</li>
                                         <li class="fa-bolt">Measurement using SEM, AFM, STM</li>
 										<li class="fa-code">Medium: Minitab </li>
-										<li class="fa-bolt">Semiconducor layout (LAKER)</li>
+										<li class="fa-bolt">CAD(autoCAD),Semiconducor layout (LAKER,Ic station)</li>
 										<li class="fa-code">Basic: Python, SQL</li>
 										<li class="fa-users">collaborative, problem solving,teaching</li>
 									</ul>
