--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 				<footer>
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/pinwei-wu-514713120/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+					    <li><a href="https://github.com/iceicery" class="icon fa-github"><span class="label">Github</span></a></li>
 					</ul>
+
 				</footer>
 			</section>
 
