Revert "Merge branch 'master' of https://github.com/iceicery/pinwei.github.io"
This reverts commit 2aa46cf15f40bf561886ef5b1298378faafa9a3a, reversing
changes made to 3322909c99549f336782eaf80add4f72210883cf.

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 										<li class="fa-code">Advanced: SAS, R</li>
                                         <li class="fa-bolt">Measurement using SEM, AFM, STM</li>
 										<li class="fa-code">Medium: Minitab </li>
-										<li class="fa-bolt">CAD(autoCAD),Semiconducor layout (LAKER,Ic station)</li>
+										<li class="fa-bolt">Semiconducor layout (LAKER)</li>
 										<li class="fa-code">Basic: Python, SQL</li>
-										<li class="fa-users">collaborative, problem solving,teaching</li>
+										<li class="fa-users">Working with others, problem solving,teaching</li>
 									</ul>
 								</div>
 							</section>
@@ -121,20 +121,20 @@
 									<h3>A Few Accomplishments</h3>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/probes.JPG" alt="" /></a>
+											<a href="#" class="image"><img src="images/probes.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>M.S. thesis “Permeability and Spatial Resolution of High Permeability Probes”</h4>
 												<p>As a master student of applied physics and a research assistant, I simulated the best shape for the SSTM probe based on fundamental electromagnetism and finite element analysis. I also produced the probe using chemical etching and focus iron Bean.</p> <a href="https://patents.google.com/patent/US20070268016A1/en" ><p>Link to SSTM introduction</p></a>						
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/patent.JPG" alt="" /></a>
+											<a href="#" class="image"><img src="images/patent.jpg" alt="" /></a>
 											<div class="inner">
 												<h4> Patent “Pixel Array and Display Panel Having the Same” (US20110310032 A1)</h4>
-												<p>As a TFT LCD Panel design engineer, I overcame the light line issues of a 6" LCD touch panel by changing the pattern of layout and wrote a patent with my colleagues.</p><a href="https://patents.google.com/patent/US20110310032"><p>Link to the patent</p></a>
+												<p>As a TFT LCD Panel design engineer, I overcame the light line issues of a 6" LCD touch panel by changing the pattern of layout and wrote a patent with my colleague.</p><a href="https://patents.google.com/patent/US20110310032"><p>Link to the patent</p></a>
 											</div>
 										</article>										<article>
-											<a href="#" class="image"><img src="images/melanoma.JPG" alt="" /></a>
+											<a href="#" class="image"><img src="images/melanoma.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Marketing analysis, cancer Crude rate and rate ratio calculation, data preparation for story map  </h4>
 												<p> As a research intern at Milton S. Hershey Medical Center, I led an analysis that compares the market share of melanoma cancer for vaious hospital. I developed data cleaning code, built formatted data sets and developed R program to calculate age adjusted cancer crude rate and rate ratio. I provided data and helpd build story map on esri.com regarding cancer in catchment area, PA.</p><a href="http://redlands.pop.psu.edu/storymap/index.html?bookmark=%E2%97%8B%20PSCI"><p>Link to the story map</p></a>
