--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 										<li class="fa-code">Medium: Minitab </li>
 										<li class="fa-bolt">Semiconducor layout (LAKER)</li>
 										<li class="fa-code">Basic: Python, SQL</li>
-										<li class="fa-users">collaborative, problem solving</li>
+										<li class="fa-users">Collaborative, problem solving</li>
 									</ul>
 								</div>
 							</section>
