--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 		<nav id="nav">
 			<ul>
 				<li><a href="#one" class="active">About</a></li>
+				<li><a href="#two_3">Things I Can Do</a></li>
 				<li><a href="#two">Web Projects</a></li>
 				<li><a href="#two_1">Education</a></li>
 				<li><a href="#two_2">Work Experience</a></li>
-				<li><a href="#two_3">Things I Can Do</a></li>
 				<li><a href="#three">A Few Accomplishments</a></li>
 				<li><a href="#four">Contact</a></li>
 			</ul>
@@ -64,7 +64,7 @@
 					<p>In 2020, I was selected to join Practicum by Yandex Web Developer beta-testing program - a
 						intensive 10-month course in web development that covers HTML, CSS, JavaScript, React, back-end
 						infrastructure, and more.
-						I learned a lot through working on projects with deadlines and proud to see my ideas goes alive
+						I learned a lot through working on projects with deadlines and am proud to see my ideas goes alive
 						in web program. Since then, I fall in love in programing. </p>
 					<p>I live in Huntsville, AL. I am a Physicist/Statistician in my educational training, and I am an
 						Engineer/Educator by nature. I love cooking, hiking,traveling, reading and watching Netflix.</p>
@@ -72,15 +72,43 @@
 				</div>
 
 			</section>
-
-
+			<!-- Two -->
+			<section id="two_3">
+				<div class="container">
+					<h3>Things I Can Do</h3>
+					<p></p>
+					<ul class="feature-icons">
+						<li class="fa-code">Web Programing: HTML CSS JavaScript Git React Node.js</li>
+						<li class="fa-code">Statistical Programing: SAS R Minitab </li>
+						<li class="fa-code">Others: Python, SQL Matlab MS-office Excel</li>
+					</ul>
+				</div>
+			</section>
 			<!-- Two -->
 			<section id="two">
 				<div class="container">
 					<h3>Web Projects</h3>
 					<p></p>
-					<ul class="review_bottom">
-                       
+					<ul class="review_bottom box">
+						<li><a href="https://iceicery.github.io/web_project_1/" target="_blank"><img
+									src="images/LearningHowToLearn.JPG" alt="website Img" class="web_img"></a>
+							<p>This project is a website providing information of how to learn. HTML and CCS coding are based on BEM file structure. 
+								Several animations,links, pictures and flex bloxes were used for better layout and function.</p>
+						</li>
+						<li><a href="https://iceicery.github.io/web_project_3/" target="_blank"><img
+									src="images/FromPortlandToPortland.JPG" alt="website Img" class="web_img"></a>
+								<p>This project is a website providing information of bicycle journey from Portland, ME. to Portland, OR. 
+									In this project, Flex and grid display are used for better layout and media query is used for diffent display.</p>
+								</li>
+						<li><a href="https://iceicery.github.io/web_project_4/dist/index.html" target="_blank"><img
+									src="images/AroundUs.JPG" alt="website Img" class="web_img"></a>
+							<p>This project is a website providing information of journey around the U.S. In this
+								project, Flex and grid display are used
+								for better layout and media query is used for diffent size displays. JavaScript is used
+								to provided changes to the title, subtitle,
+								add picture elements and validate the input by the users .BEM structures, OOP classes
+								and javascript modules are used in this project. This project is linked to api servers with other users</p>
+						</li>
 					</ul>
 				</div>
 			</section>
@@ -121,18 +149,6 @@
 								Senior High School</a></li>
 
 					</ul>
-					</ul>
-				</div>
-			</section>
-			<!-- Two -->
-			<section id="two_3">
-				<div class="container">
-					<h3>Things I Can Do</h3>
-					<p></p>
-					<ul class="feature-icons">
-						<li class="fa-code">Web Programing: HTML CSS JavaScript Git React Node.js</li>
-						<li class="fa-code">Statistical Programing: SAS R Minitab </li>
-						<li class="fa-code">Others: Python, SQL Matlab MS-office Excel</li>
 					</ul>
 				</div>
 			</section>
@@ -188,8 +204,7 @@
 			<section id="four">
 				<div class="container">
 					<h3>Contact Me</h3>
-
-					<form method="post" action="https://formspree.io/pw.amy.wu@email.com">
+					<form method="post" action="https://formspree.io/pw.amy.wu@gmail.com">
 						<div class="row gtr-uniform">
 							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name"
 									placeholder="Name" /></div>
