add / in what-i-can-do

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 					<h3>Things I Can Do</h3>
 					<p></p>
 					<ul class="feature-icons">
-						<li class="fa-code">Web Programing: HTML CSS JavaScript Git React Node.js</li>
-						<li class="fa-code">Statistical Programing: SAS R Minitab </li>
-						<li class="fa-code">Others: Python, SQL Matlab MS-office Excel</li>
+						<li class="fa-code">Web Programing: HTML/ CSS/ JavaScript/ Git/ React/ Node.js</li>
+						<li class="fa-code">Statistical Programing: SAS/ R/ Minitab </li>
+						<li class="fa-code">Others: Python/ SQL/ Matlab/ MS-office/ Excel</li>
 					</ul>
 				</div>
 			</section>
