--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 								<li class="pj__lan">css</li>
 								<li class="pj__lan">html</li>
 								<li class="pj__lan">JS</li>
-								<a href="https://github.com/iceicery/web_project_4" target="_blank"><li class="pj__code">code</li></a>
+								<a class="link" href="https://github.com/iceicery/web_project_4" target="_blank"><li class="pj__code">code</li></a>
 								<a href="https://github.com/iceicery/around-react" target="_blank"><li class="pj__code">React.js Code</li></a>
 							</ul>
 							<p>This project is a website providing information of journey around the U.S. In this
@@ -232,6 +232,14 @@
 			<section id="four">
 				<div class="container">
 					<h3>Contact Me</h3>
+					<p> &#9993; pw.amy.wu@gmail.com</p>
+					<ul class="icons">
+						<li><a href="https://www.linkedin.com/in/pinwei-wu-514713120/" class="icon fa-linkedin"><span
+									class="label">Linkedin</span></a></li>
+						<li><a href="https://github.com/iceicery" class="icon fa-github"><span class="label">Github</span></a>
+						</li>
+					</ul>
+					<!--
 					<form method="post" action="https://formspree.io/pw.amy.wu@gmail.com">
 						<div class="row gtr-uniform">
 							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name"
@@ -251,6 +259,7 @@
 							</div>
 						</div>
 					</form>
+				-->
 				</div>
 			</section>
 
