--- a/index.html
+++ b/index.html
@@ -61,12 +61,8 @@
 						<h2>Hi, I am Pinwei Wu. </h2>
 					</header>
 					<h3>A constant learner who never stops.</h3>
-					<p>In 2020, I was selected to join Practicum by Yandex Web Developer beta-testing program - a
-						intensive 10-month course in web development that covers HTML, CSS, JavaScript, React, back-end
-						infrastructure, and more.
-						I learned a lot through working on projects with deadlines and am proud to see my ideas goes
-						alive
-						in web program. Since then, I fall in love in programing. </p>
+					<p>In 2020, I was selected to join Practicum by Yandex Web Developer beta-testing program - a intensive 10-month course in web development that covers HTML, CSS, JavaScript, React, back-end infrastructure, and more. 
+						I learned a lot through working on projects with deadlines and am proud to see my ideas goe alive in web programming. Since then, I have fallen in love in programming. </p>
 					<p>I live in Huntsville, AL. I am a Physicist/Statistician in my educational training, and I am an
 						Engineer/Educator by nature. I love cooking, hiking,traveling, reading and watching Netflix.</p>
 
