add basecalculator project

--- a/index.html
+++ b/index.html
@@ -134,6 +134,25 @@
 								with other users</p>
 						</li>
 					</ul>
+					<ul class="review_bottom box">
+						<li><a href="https://iceicery.github.io/web_project_4/dist/index.html" target="_blank"><img
+									src="images/AroundUs.JPG" alt="website Img" class="web_img"></a>
+							<ul class="pj">
+								<li class="pj__lan">css</li>
+								<li class="pj__lan">html</li>
+								<li class="pj__lan">JS</li>
+								<a class="link" href="https://github.com/iceicery/web_project_4" target="_blank"><li class="pj__code">code</li></a>
+								<a href="https://github.com/iceicery/around-react" target="_blank"><li class="pj__code">React.js Code</li></a>
+							</ul>
+							<p>This project is a website providing information of journey around the U.S. In this
+								project, Flex and grid display are used
+								for better layout and media query is used for diffent size displays. JavaScript is used
+								to provided changes to the title, subtitle,
+								add picture elements and validate the input by the users .BEM structures, OOP classes
+								and javascript modules are used in this project. This project is linked to api servers
+								with other users</p>
+						</li>
+					</ul>
 				</div>
 			</section>
 			<section id="two_1">
