add project base calculator

--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
 						<h2>Hi, I am Pinwei Wu. </h2>
 					</header>
 					<h3>A constant learner who never stops.</h3>
-					<p>In 2020, I was selected to join Practicum by Yandex Web Developer beta-testing program - a intensive 10-month course in web development that covers HTML, CSS, JavaScript, React, back-end infrastructure, and more. 
-						I learned a lot through working on projects with deadlines and am proud to see my ideas goe alive in web programming. Since then, I have fallen in love in programming. </p>
+					<p>In 2020, I was selected to join Practicum by Yandex Web Developer beta-testing program - a
+						intensive 10-month course in web development that covers HTML, CSS, JavaScript, React, back-end
+						infrastructure, and more.
+						I learned a lot through working on projects with deadlines and am proud to see my ideas goe
+						alive in web programming. Since then, I have fallen in love in programming. </p>
 					<p>I live in Huntsville, AL. I am a Physicist/Statistician in my educational training, and I am an
 						Engineer/Educator by nature. I love cooking, hiking,traveling, reading and watching Netflix.</p>
 
@@ -92,13 +95,15 @@
 							<ul class="pj">
 								<li class="pj__lan">css</li>
 								<li class="pj__lan">html</li>
-								<a href="https://github.com/iceicery/web_project_1" target="_blank"><li class="pj__code">code</li></a>
+								<a href="https://github.com/iceicery/web_project_1" target="_blank">
+									<li class="pj__code">code</li>
+								</a>
 							</ul>
-					
-					<p>This project is a website providing information of how to learn. HTML and CCS coding are
-						based on BEM file structure.
-						Several animations,links, pictures and flex bloxes were used for better layout and
-						function.</p>
+
+							<p>This project is a website providing information of how to learn. HTML and CCS coding are
+								based on BEM file structure.
+								Several animations,links, pictures and flex bloxes were used for better layout and
+								function.</p>
 					</ul>
 					</li>
 					<ul class="review_bottom box">
@@ -107,7 +112,9 @@
 							<ul class="pj">
 								<li class="pj__lan">css</li>
 								<li class="pj__lan">html</li>
-								<a href="https://github.com/iceicery/web_project_3" target="_blank"><li class="pj__code">code</li></a>
+								<a href="https://github.com/iceicery/web_project_3" target="_blank">
+									<li class="pj__code">code</li>
+								</a>
 							</ul>
 							<p>This project is a website providing information of bicycle journey from Portland, ME. to
 								Portland, OR.
@@ -122,8 +129,12 @@
 								<li class="pj__lan">css</li>
 								<li class="pj__lan">html</li>
 								<li class="pj__lan">JS</li>
-								<a class="link" href="https://github.com/iceicery/web_project_4" target="_blank"><li class="pj__code">code</li></a>
-								<a href="https://github.com/iceicery/around-react" target="_blank"><li class="pj__code">React.js Code</li></a>
+								<a class="link" href="https://github.com/iceicery/web_project_4" target="_blank">
+									<li class="pj__code">code</li>
+								</a>
+								<a href="https://github.com/iceicery/around-react" target="_blank">
+									<li class="pj__code">React.js Code</li>
+								</a>
 							</ul>
 							<p>This project is a website providing information of journey around the U.S. In this
 								project, Flex and grid display are used
@@ -135,22 +146,17 @@
 						</li>
 					</ul>
 					<ul class="review_bottom box">
-						<li><a href="https://iceicery.github.io/web_project_4/dist/index.html" target="_blank"><img
-									src="images/AroundUs.JPG" alt="website Img" class="web_img"></a>
+						<li><a href="https://iceicery.github.io/BaseCaculator/" target="_blank"><img
+									src="images/baseCalculator.JPG" alt="website Img" class="web_img"></a>
 							<ul class="pj">
 								<li class="pj__lan">css</li>
 								<li class="pj__lan">html</li>
 								<li class="pj__lan">JS</li>
-								<a class="link" href="https://github.com/iceicery/web_project_4" target="_blank"><li class="pj__code">code</li></a>
-								<a href="https://github.com/iceicery/around-react" target="_blank"><li class="pj__code">React.js Code</li></a>
+								<a class="link" href="https://github.com/iceicery/BaseCaculator" target="_blank">
+									<li class="pj__code">code</li>
+								</a>
 							</ul>
-							<p>This project is a website providing information of journey around the U.S. In this
-								project, Flex and grid display are used
-								for better layout and media query is used for diffent size displays. JavaScript is used
-								to provided changes to the title, subtitle,
-								add picture elements and validate the input by the users .BEM structures, OOP classes
-								and javascript modules are used in this project. This project is linked to api servers
-								with other users</p>
+							<p>This project is a website providing four different base calculators including binary, octal, decimal and hexadecimal. The user should operate the calculator one at a time. After clearing the result, the user could operate again.</p>
 						</li>
 					</ul>
 				</div>
@@ -251,7 +257,8 @@
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/pinwei-wu-514713120/" class="icon fa-linkedin"><span
 									class="label">Linkedin</span></a></li>
-						<li><a href="https://github.com/iceicery" class="icon fa-github"><span class="label">Github</span></a>
+						<li><a href="https://github.com/iceicery" class="icon fa-github"><span
+									class="label">Github</span></a>
 						</li>
 					</ul>
 					<!--
