add mobile image for project calculator

--- a/index.html
+++ b/index.html
@@ -146,8 +146,13 @@
 						</li>
 					</ul>
 					<ul class="review_bottom box">
-						<li><a href="https://iceicery.github.io/BaseCaculator/" target="_blank"><img
-									src="images/baseCalculator.JPG" alt="website Img" class="web_img"></a>
+						<li>
+							<div class="web__box">
+								<a href="https://iceicery.github.io/BaseCaculator/" target="_blank"><img
+										src="images/baseCalculator.JPG" alt="website Img" class="web_img"></a>
+								<a href="https://iceicery.github.io/BaseCaculator/" target="_blank"><img
+										src="images/baseCalculator_mobile.JPG" alt="website Img" class="web_mobil"></a>
+							</div>
 							<ul class="pj">
 								<li class="pj__lan">css</li>
 								<li class="pj__lan">html</li>
@@ -156,7 +161,9 @@
 									<li class="pj__code">code</li>
 								</a>
 							</ul>
-							<p>This project is a website providing four different base calculators including binary, octal, decimal and hexadecimal. The user should operate the calculator one at a time. After clearing the result, the user could operate again.</p>
+							<p>This project is a website providing four different base calculators including binary,
+								octal, decimal and hexadecimal. The user should operate the calculator one at a time.
+								After clearing the result, the user could operate again.</p>
 						</li>
 					</ul>
 				</div>
