--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 									cleaning code, built formatted data sets and developed R program to calculate age
 									adjusted cancer crude rate and rate ratio. I provided data and helpd build story map
 									on esri.com regarding cancer in catchment area, PA.</p><a
-									href="http://redlands.pop.psu.edu/storymap/index.html?bookmark=%E2%97%8B%20PSCI">
+									href="https://psulss.maps.arcgis.com/apps/Cascade/index.html?appid=0fed8fee47cd483b963f056a774b0467">
 									<p>Link to the story map</p>
 								</a>
 							</div>
