add link to new website

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-
 <head>
 	<title>Pinwei Amy Wu</title>
 	<meta charset="utf-8" />
@@ -13,8 +12,8 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
-<body class="is-preload">
-
+<body class="is-preload body__flex">
+    <div class="overlay"><div class="newLink-box"><a class="newLink" target="_blank" rel="noreferrer" href="https://iceicery.github.io/pesonal-website-react/">Please visit my new website.</a></div></div>
 	<!-- Header -->
 	<section id="header">
 		<header>
